--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flame: ^1.11.0
   flutter_animate: ^4.2.0
+  google_fonts: 
 
 dev_dependencies:
   flutter_test:
